elf: Use standard ID naming for Target category options

--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -7,24 +7,24 @@ base.builder = ARC GNU Builder
 
 # Target processor
 option.target = Target Processor
-option.use_tcf = Use TCF
-option.tcf_path = TCF Path
-option.tcf_map = Use memory map from TCF
-option.tcf_cinclude = Include C defines from TCF
-option.cpu = Processor (-mcpu)
-option.fpu = FPU
-option.mpy = Multiply instructions
-option.divrem = Integer divide instructions (-mdiv-rem)
-option.code_density = Code density (-mcode-density)
-option.barrel_shifter = Barrel shifter (-mbarrel-shifter)
-option.norm = Bitscan instruction (-mnorm)
-option.swap = Swap instruction (-mswap)
-option.ll64 = 64-bit load/store instructions (-mll64)
-option.atomic = Atomic functions (-matomic)
-option.ea = Extended Arithmetic Instructions (-mea)
-option.xy = DSP XY memory (-mxy)
-option.xy.tip = Passed down to the assembler to enable the XY memory extension. Also sets the preprocessor symbol __Xxy.
-option.dpfplrsr = Forbid LR and SR to use FPX registers (-mno-dpfp-lrsr)
+option.target.use_tcf = Use TCF
+option.target.tcf_path = TCF Path
+option.target.tcf_map = Use memory map from TCF
+option.target.tcf_cinclude = Include C defines from TCF
+option.target.cpu = Processor (-mcpu)
+option.target.fpu = FPU
+option.target.mpy = Multiply instructions
+option.target.divrem = Integer divide instructions (-mdiv-rem)
+option.target.code_density = Code density (-mcode-density)
+option.target.barrel_shifter = Barrel shifter (-mbarrel-shifter)
+option.target.norm = Bitscan instruction (-mnorm)
+option.target.swap = Swap instruction (-mswap)
+option.target.ll64 = 64-bit load/store instructions (-mll64)
+option.target.atomic = Atomic functions (-matomic)
+option.target.ea = Extended Arithmetic Instructions (-mea)
+option.target.xy = DSP XY memory (-mxy)
+option.target.xy.tip = Passed down to the assembler to enable the XY memory extension. Also sets the preprocessor symbol __Xxy.
+option.target.dpfplrsr = Forbid LR and SR to use FPX registers (-mno-dpfp-lrsr)
 
 # Additional tools
 option.extratools = Additional Tools
