--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -1597,119 +1597,118 @@
                id="arc.gnu.elf.tool.flash.base"
                natureFilter="both">
             <optionCategory
-                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.out"
+                  id="arc.gnu.elf.flash.category.output"
                   name="Output"
                   owner="arc.gnu.elf.tool.flash.base">
             </optionCategory>
             <option
-                  category="com.synopsys.arc.gnu.elf.tool.flash.arc.out"
-                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice"
+                  category="arc.gnu.elf.flash.category.output"
+                  id="arc.gnu.elf.flash.option.output"
                   name="Output file format (-O)"
                   valueType="enumerated">
                <enumeratedOptionValue
                      command="-O ihex"
-                     id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice.ihex"
+                     id="arc.gnu.elf.flash.option.output.ihex"
                      name="ihex">
                </enumeratedOptionValue>
                <enumeratedOptionValue
                      command="-O elf32-littlearc"
-                     id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice.elf32-littlearc"
+                     id="arc.gnu.elf.flash.option.output.elf32-littlearc"
                      name="elf32-littlearc">
                </enumeratedOptionValue>
                <enumeratedOptionValue
                      command="-O elf32-bigarc"
-                     id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice.elf32-bigarc"
+                     id="arc.gnu.elf.flash.option.output.elf32-bigarc"
                      name="elf32-bigarc">
                </enumeratedOptionValue>
                <enumeratedOptionValue
                      command="-O elf32-little"
-                     id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice.elf32-little"
+                     id="arc.gnu.elf.flash.option.output.elf32-little"
                      name="elf32-little">
                </enumeratedOptionValue>
                <enumeratedOptionValue
                      command="-O elf32-big"
-                     id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice.elf32-big"
+                     id="arc.gnu.elf.flash.option.output.elf32-big"
                      name="elf32-bit">
                </enumeratedOptionValue>
                <enumeratedOptionValue
                      command="-O srec"
-                     id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice.srec"
+                     id="arc.gnu.elf.flash.option.output.srec"
                      name="srec">
                </enumeratedOptionValue>
                <enumeratedOptionValue
                      command="-O symbolsrec"
-                     id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice.symbolsrec"
+                     id="arc.gnu.elf.flash.option.output.symbolsrec"
                      name="symbolsrec">
                </enumeratedOptionValue>
                <enumeratedOptionValue
                      command="-O tekhex"
-                     id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice.tekhex"
+                     id="arc.gnu.elf.flash.option.output.tekhex"
                      name="tekhex">
                </enumeratedOptionValue>
                <enumeratedOptionValue
                      command="-O binary"
-                     id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice.binary"
+                     id="arc.gnu.elf.flash.option.output.binary"
                      name="binary">
                </enumeratedOptionValue>
             </option>
             <optionCategory
-                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.section"
+                  id="arc.gnu.elf.flash.category.section"
                   name="Section"
                   owner="arc.gnu.elf.tool.flash.base">
             </optionCategory>
             <option
-                  category="com.synopsys.arc.gnu.elf.tool.flash.arc.section"
+                  category="arc.gnu.elf.flash.category.section"
                   command="-j .text"
-                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.section.text"
+                  id="arc.gnu.elf.flash.option.section_text"
                   isAbstract="false"
                   name="Section: -j .text"
                   resourceFilter="all"
                   valueType="boolean">
             </option>
             <option
-                  category="com.synopsys.arc.gnu.elf.tool.flash.arc.section"
+                  category="arc.gnu.elf.flash.category.section"
                   command="-j .data"
-                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.section.data"
+                  id="arc.gnu.elf.flash.option.section_data"
                   isAbstract="false"
                   name="Section: -j .data"
                   resourceFilter="all"
                   valueType="boolean">
             </option>
             <option
-                  category="com.synopsys.arc.gnu.elf.tool.flash.arc.section"
+                  category="arc.gnu.elf.flash.category.section"
                   command="-j "
-                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.section.other"
+                  id="arc.gnu.elf.flash.option.section_other"
                   isAbstract="false"
                   name="Other (-j)"
                   resourceFilter="all"
                   valueType="stringList">
             </option>
             <optionCategory
-                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.misc"
+                  id="arc.gnu.elf.flash.category.misc"
                   name="Miscellaneous"
                   owner="arc.gnu.elf.tool.flash.base">
             </optionCategory>
             <option
-                  category="com.synopsys.arc.gnu.elf.tool.flash.arc.misc"
-                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.misc.otheropt"
+                  category="arc.gnu.elf.flash.category.misc"
+                  id="arc.gnu.elf.flash.option.other"
                   name="Other options"
                   valueType="string">
             </option>
             <outputType
                   buildVariable="SECONDARY_FLASH"
-                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.output"
-                  outputContentType="org.eclipse.cdt.cross.arc.gnu.content-type.hex"
+                  id="arc.gnu.elf.flash.output"
                   outputNames="${BuildArtifactFileBaseName}.hex"
                   outputs="hex">
             </outputType>
             <inputType
-                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.input"
+                  id="arc.gnu.elf.flash.input"
                   multipleOfType="true"
-                  option="com.synopsys.arc.gnu.elf.tool.flash.arc.InFileName"
+                  option="arc.gnu.elf.flash.option.in_file_name"
                   sources="elf">
             </inputType>
             <option
-                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.InFileName"
+                  id="arc.gnu.elf.flash.option.in_file_name"
                   resourceFilter="all"
                   value="${BuildArtifactFileName}"
                   valueType="string">
@@ -1858,7 +1857,7 @@
       <toolChain
             id="arc.gnu.elf.toolchain.arc"
             isAbstract="true"
-            secondaryOutputs="arc.gnu.elf.tool.flash.arc.output;arc.gnu.elf.tool.listing.arc.output;arc.gnu.elf.tool.printsize.arc.output"
+            secondaryOutputs="arc.gnu.elf.flash.output;arc.gnu.elf.tool.listing.arc.output;arc.gnu.elf.tool.printsize.arc.output"
             superClass="arc.gnu.elf.toolchain.base"
             targetTool="arc.gnu.elf.tool.c.linker.arc;arc.gnu.elf.tool.cpp.linker.arc">
          <tool
@@ -1949,7 +1948,7 @@
       <toolChain
             id="arc.gnu.elf.toolchain.arceb"
             isAbstract="true"
-            secondaryOutputs="arc.gnu.elf.tool.flash.arc.output;arc.gnu.elf.tool.listing.arc.output;arc.gnu.elf.tool.printsize.arc.output"
+            secondaryOutputs="arc.gnu.elf.flash.output;arc.gnu.elf.tool.listing.arc.output;arc.gnu.elf.tool.printsize.arc.output"
             superClass="arc.gnu.elf.toolchain.base"
             targetTool="arc.gnu.elf.tool.c.linker.arc;arc.gnu.elf.tool.cpp.linker.arc">
          <tool
